--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "values.js": "^2.1.1"
   },
   "devDependencies": {
